--- a/notebooks/Laks_new_formulation.ipynb
+++ b/notebooks/Laks_new_formulation.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 118,
       "metadata": {
         "id": "bKlxou0Qumq0"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 119,
       "metadata": {
         "id": "cS6rhxactc3Q"
       },
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 120,
       "metadata": {
         "id": "JULUvrCluwg_"
       },
@@ -255,7 +255,7 @@
               "[126612 rows x 11 columns]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 121,
       "metadata": {},
       "outputs": [
         {
@@ -445,7 +445,7 @@
               "[55854 rows x 8 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -457,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 122,
       "metadata": {},
       "outputs": [
         {
@@ -477,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 123,
       "metadata": {},
       "outputs": [
         {
@@ -813,7 +813,7 @@
               "[126612 rows x 19 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 124,
       "metadata": {
         "id": "cgo3Vct8G1YC"
       },
@@ -852,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 125,
       "metadata": {},
       "outputs": [
         {
@@ -1200,7 +1200,7 @@
               "[126612 rows x 20 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1213,7 +1213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1589,7 +1589,7 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 126,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1607,7 +1607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1983,7 +1983,7 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2001,7 +2001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 128,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2377,7 +2377,7 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2389,7 +2389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
@@ -2758,7 +2758,7 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2776,7 +2776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3152,13 +3152,14 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 130,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "F = (vaf_table * copy_number_table).clip(upper=1)\n",
+        "F.to_csv(\"../outputs/F.csv\")\n",
         "F"
       ]
     },
