Getting evidence for B-/->A (failed)

--- a/notebooks/Laks_new_formulation_using_kmeans_clustering.ipynb
+++ b/notebooks/Laks_new_formulation_using_kmeans_clustering.ipynb
@@ -12250,6 +12250,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X, B, U, F, G = solutions[0]\n",
+        "solT_mut, solT_cell = generate_perfect_phylogeny(B)\n",
+        "# draw_clone_tree(solT_mut)\n",
+        "fixed_T = fix_T(B, G, solT_cell)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 39,
       "metadata": {},
       "outputs": [
