--- a/notebooks/chisel_scratch.ipynb
+++ b/notebooks/chisel_scratch.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "73ac44c3",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "[5815140 rows x 13 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a6fb10a1",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "[5815140 rows x 14 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3073d4ba",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "[10202 rows x 570 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "8e0de171",
    "metadata": {},
    "outputs": [],
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "173a6b40",
    "metadata": {},
    "outputs": [],
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "f5915aa8",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "fab69ac2",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1706,7 @@
        "[10202 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "670917a4",
    "metadata": {},
    "outputs": [
@@ -1743,7 +1743,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "6842f575",
    "metadata": {},
    "outputs": [
@@ -1990,7 +1990,7 @@
        "[49300 rows x 6 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "a5ad1f7b",
    "metadata": {},
    "outputs": [
@@ -2157,7 +2157,7 @@
        "[535767 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "d59215c1",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2353,7 @@
        "[535767 rows x 7 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "54c38434",
    "metadata": {},
    "outputs": [
@@ -2570,7 +2570,7 @@
        "[535767 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "83066978",
    "metadata": {},
    "outputs": [],
@@ -2599,7 +2599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "684d76ff",
    "metadata": {},
    "outputs": [
@@ -3105,7 +3105,7 @@
        "[13 rows x 1327 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3125,28 +3125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "id": "e94879ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        11\n",
-       "1         3\n",
-       "2        22\n",
-       "3         4\n",
-       "4         5\n",
-       "         ..\n",
-       "49295     3\n",
-       "49296     3\n",
-       "49297     2\n",
-       "49298     8\n",
-       "49299    28\n",
-       "Name: HARBORING_CELLS, Length: 49300, dtype: int64"
+       "0        NaN\n",
+       "1        NaN\n",
+       "2        NaN\n",
+       "3        NaN\n",
+       "4        NaN\n",
+       "        ... \n",
+       "49295    NaN\n",
+       "49296    NaN\n",
+       "49297    NaN\n",
+       "49298    NaN\n",
+       "49299    NaN\n",
+       "Name: HARBORING_CELLS, Length: 49300, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3157,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "cf10b907",
    "metadata": {},
    "outputs": [
@@ -3361,7 +3361,7 @@
        "[49300 rows x 9 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3373,7 +3373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "b8336cbf",
    "metadata": {},
    "outputs": [
@@ -3396,7 +3396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f346f7",
+   "id": "98f729df",
    "metadata": {},
    "outputs": [],
    "source": []
