Download williams dataset

--- a/notebooks/TNBC.ipynb
+++ b/notebooks/TNBC.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "befbf0a5",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "5be84523",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "f5ef2d94",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "[1101 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "id": "d530a4e5",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "[1101 rows x 2 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "id": "3e69fc62",
    "metadata": {},
    "outputs": [
@@ -498,39 +498,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>784</td>\n",
-       "      <td>1</td>\n",
-       "      <td>784</td>\n",
-       "      <td>CCATCCTTGCAGCGA</td>\n",
+       "      <th>492</th>\n",
+       "      <td>282</td>\n",
+       "      <td>4</td>\n",
+       "      <td>282</td>\n",
+       "      <td>AAAAGGGCAGAGATC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>946</td>\n",
-       "      <td>1</td>\n",
-       "      <td>946</td>\n",
-       "      <td>CCAGGACGTTAAAAT</td>\n",
+       "      <th>517</th>\n",
+       "      <td>565</td>\n",
+       "      <td>4</td>\n",
+       "      <td>565</td>\n",
+       "      <td>AAAATAACGTGTCGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>410</td>\n",
-       "      <td>1</td>\n",
-       "      <td>410</td>\n",
-       "      <td>GTCTCCTCTGGGCGC</td>\n",
+       "      <th>80</th>\n",
+       "      <td>429</td>\n",
+       "      <td>2</td>\n",
+       "      <td>429</td>\n",
+       "      <td>AAACCTCATGTCAGC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>674</td>\n",
-       "      <td>1</td>\n",
-       "      <td>674</td>\n",
-       "      <td>CATGGCCCAGTATGG</td>\n",
+       "      <th>416</th>\n",
+       "      <td>225</td>\n",
+       "      <td>4</td>\n",
+       "      <td>225</td>\n",
+       "      <td>AAAGACCATGTCGAA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>553</td>\n",
-       "      <td>1</td>\n",
-       "      <td>553</td>\n",
-       "      <td>CGTCCGAGCTTCCCT</td>\n",
+       "      <th>434</th>\n",
+       "      <td>424</td>\n",
+       "      <td>4</td>\n",
+       "      <td>424</td>\n",
+       "      <td>AAAGCGCACGCAAAG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -540,39 +540,39 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1096</th>\n",
-       "      <td>408</td>\n",
+       "      <th>987</th>\n",
+       "      <td>601</td>\n",
        "      <td>9</td>\n",
-       "      <td>408</td>\n",
-       "      <td>CGCCTTCCCGAGCCC</td>\n",
+       "      <td>601</td>\n",
+       "      <td>TTTGTAGGGACGAAT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1097</th>\n",
-       "      <td>795</td>\n",
-       "      <td>9</td>\n",
-       "      <td>795</td>\n",
-       "      <td>GTTGCGTGTGTCTTT</td>\n",
+       "      <th>502</th>\n",
+       "      <td>76</td>\n",
+       "      <td>4</td>\n",
+       "      <td>76</td>\n",
+       "      <td>TTTTCAAAACGATTA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1098</th>\n",
-       "      <td>530</td>\n",
-       "      <td>9</td>\n",
-       "      <td>530</td>\n",
-       "      <td>GCGGGATCATTACGC</td>\n",
+       "      <th>131</th>\n",
+       "      <td>361</td>\n",
+       "      <td>2</td>\n",
+       "      <td>361</td>\n",
+       "      <td>TTTTCGTATGGTATC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1099</th>\n",
-       "      <td>769</td>\n",
-       "      <td>9</td>\n",
-       "      <td>769</td>\n",
-       "      <td>CGGGGAACGCAATTC</td>\n",
+       "      <th>609</th>\n",
+       "      <td>294</td>\n",
+       "      <td>4</td>\n",
+       "      <td>294</td>\n",
+       "      <td>TTTTTGCGGATAGTG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1100</th>\n",
-       "      <td>705</td>\n",
-       "      <td>9</td>\n",
-       "      <td>705</td>\n",
-       "      <td>TGTTCATATATCCGA</td>\n",
+       "      <th>98</th>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>32</td>\n",
+       "      <td>TTTTTGCTGCAAAAA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -580,35 +580,35 @@
        "</div>"
       ],
       "text/plain": [
-       "      cell  cluster  cell_id     cell_barcode\n",
-       "0      784        1      784  CCATCCTTGCAGCGA\n",
-       "1      946        1      946  CCAGGACGTTAAAAT\n",
-       "2      410        1      410  GTCTCCTCTGGGCGC\n",
-       "3      674        1      674  CATGGCCCAGTATGG\n",
-       "4      553        1      553  CGTCCGAGCTTCCCT\n",
-       "...    ...      ...      ...              ...\n",
-       "1096   408        9      408  CGCCTTCCCGAGCCC\n",
-       "1097   795        9      795  GTTGCGTGTGTCTTT\n",
-       "1098   530        9      530  GCGGGATCATTACGC\n",
-       "1099   769        9      769  CGGGGAACGCAATTC\n",
-       "1100   705        9      705  TGTTCATATATCCGA\n",
+       "     cell  cluster  cell_id     cell_barcode\n",
+       "492   282        4      282  AAAAGGGCAGAGATC\n",
+       "517   565        4      565  AAAATAACGTGTCGC\n",
+       "80    429        2      429  AAACCTCATGTCAGC\n",
+       "416   225        4      225  AAAGACCATGTCGAA\n",
+       "434   424        4      424  AAAGCGCACGCAAAG\n",
+       "..    ...      ...      ...              ...\n",
+       "987   601        9      601  TTTGTAGGGACGAAT\n",
+       "502    76        4       76  TTTTCAAAACGATTA\n",
+       "131   361        2      361  TTTTCGTATGGTATC\n",
+       "609   294        4      294  TTTTTGCGGATAGTG\n",
+       "98     32        2       32  TTTTTGCTGCAAAAA\n",
        "\n",
        "[1101 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_cellclust = pd.merge(df_cellclust, df_cell_map.rename(columns={\"cell\": \"cell_barcode\"}), left_on=\"cell\", right_on=\"cell_id\", how=\"left\")\n",
-    "df_cellclust"
+    "df_cellclust.sort_values('cell_barcode')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "1db1c515",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "[280763 rows x 6 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
+   "id": "2a197deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ATATTATTTGCGTTT'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id = 50\n",
+    "string_to_match = df_cellclust['cell_barcode'][id]\n",
+    "string_to_match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "9011b1ae",
    "metadata": {},
    "outputs": [
@@ -810,49 +833,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CTAGCCTCACGATGGA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>800001</td>\n",
-       "      <td>29200000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CTAGCCTCACGATGGA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29200001</td>\n",
-       "      <td>51600000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CTAGCCTCACGATGGA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>51600001</td>\n",
-       "      <td>80700000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CTAGCCTCACGATGGA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>80700001</td>\n",
-       "      <td>109300000</td>\n",
+       "      <th>106877</th>\n",
+       "      <td>AAACGGGAGTAGGTGC</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20700001</td>\n",
+       "      <td>47400000</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CTAGCCTCACGATGGA</td>\n",
+       "      <th>106850</th>\n",
+       "      <td>AAACGGGAGTAGGTGC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>84800001</td>\n",
+       "      <td>122100000</td>\n",
        "      <td>1</td>\n",
-       "      <td>109300001</td>\n",
-       "      <td>121600000</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106849</th>\n",
+       "      <td>AAACGGGAGTAGGTGC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>64400001</td>\n",
+       "      <td>84800000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106848</th>\n",
+       "      <td>AAACGGGAGTAGGTGC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>33500001</td>\n",
+       "      <td>64400000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106847</th>\n",
+       "      <td>AAACGGGAGTAGGTGC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>28500001</td>\n",
+       "      <td>33500000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -864,49 +887,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160495</th>\n",
-       "      <td>GTTCGGGTCTAGAACC</td>\n",
-       "      <td>20</td>\n",
-       "      <td>61800001</td>\n",
-       "      <td>64300000</td>\n",
+       "      <th>56602</th>\n",
+       "      <td>TTTGGTTTCTGGTGAT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>127600001</td>\n",
+       "      <td>128600000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56603</th>\n",
+       "      <td>TTTGGTTTCTGGTGAT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>128600001</td>\n",
+       "      <td>163400000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56604</th>\n",
+       "      <td>TTTGGTTTCTGGTGAT</td>\n",
+       "      <td>6</td>\n",
+       "      <td>163400001</td>\n",
+       "      <td>167100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56606</th>\n",
+       "      <td>TTTGGTTTCTGGTGAT</td>\n",
+       "      <td>7</td>\n",
+       "      <td>100001</td>\n",
+       "      <td>30400000</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160496</th>\n",
-       "      <td>GTTCGGGTCTAGAACC</td>\n",
-       "      <td>21</td>\n",
-       "      <td>9000001</td>\n",
-       "      <td>14300000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160497</th>\n",
-       "      <td>GTTCGGGTCTAGAACC</td>\n",
-       "      <td>21</td>\n",
-       "      <td>14300001</td>\n",
-       "      <td>46600000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160498</th>\n",
-       "      <td>GTTCGGGTCTAGAACC</td>\n",
+       "      <th>56698</th>\n",
+       "      <td>TTTGGTTTCTGGTGAT</td>\n",
        "      <td>22</td>\n",
        "      <td>16000001</td>\n",
        "      <td>24400000</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>160499</th>\n",
-       "      <td>GTTCGGGTCTAGAACC</td>\n",
-       "      <td>22</td>\n",
-       "      <td>24400001</td>\n",
-       "      <td>50700000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -915,47 +938,98 @@
       ],
       "text/plain": [
        "            Cell barcode  Chromosome      Start        End  Haplotype 1  \\\n",
-       "0       CTAGCCTCACGATGGA           1     800001   29200000            1   \n",
-       "1       CTAGCCTCACGATGGA           1   29200001   51600000            2   \n",
-       "2       CTAGCCTCACGATGGA           1   51600001   80700000            2   \n",
-       "3       CTAGCCTCACGATGGA           1   80700001  109300000            1   \n",
-       "4       CTAGCCTCACGATGGA           1  109300001  121600000            3   \n",
+       "106877  AAACGGGAGTAGGTGC          10   20700001   47400000            1   \n",
+       "106850  AAACGGGAGTAGGTGC           6   84800001  122100000            1   \n",
+       "106849  AAACGGGAGTAGGTGC           6   64400001   84800000            1   \n",
+       "106848  AAACGGGAGTAGGTGC           6   33500001   64400000            1   \n",
+       "106847  AAACGGGAGTAGGTGC           6   28500001   33500000            0   \n",
        "...                  ...         ...        ...        ...          ...   \n",
-       "160495  GTTCGGGTCTAGAACC          20   61800001   64300000            2   \n",
-       "160496  GTTCGGGTCTAGAACC          21    9000001   14300000            1   \n",
-       "160497  GTTCGGGTCTAGAACC          21   14300001   46600000            1   \n",
-       "160498  GTTCGGGTCTAGAACC          22   16000001   24400000            1   \n",
-       "160499  GTTCGGGTCTAGAACC          22   24400001   50700000            1   \n",
+       "56602   TTTGGTTTCTGGTGAT           6  127600001  128600000            0   \n",
+       "56603   TTTGGTTTCTGGTGAT           6  128600001  163400000            1   \n",
+       "56604   TTTGGTTTCTGGTGAT           6  163400001  167100000            1   \n",
+       "56606   TTTGGTTTCTGGTGAT           7     100001   30400000            2   \n",
+       "56698   TTTGGTTTCTGGTGAT          22   16000001   24400000            1   \n",
        "\n",
        "        Haplotype 2  \n",
-       "0                 2  \n",
-       "1                 1  \n",
-       "2                 1  \n",
-       "3                 2  \n",
-       "4                 2  \n",
+       "106877            2  \n",
+       "106850            2  \n",
+       "106849            2  \n",
+       "106848            2  \n",
+       "106847            0  \n",
        "...             ...  \n",
-       "160495            2  \n",
-       "160496            1  \n",
-       "160497            1  \n",
-       "160498            1  \n",
-       "160499            1  \n",
+       "56602             0  \n",
+       "56603             2  \n",
+       "56604             2  \n",
+       "56606             2  \n",
+       "56698             2  \n",
        "\n",
        "[160500 rows x 6 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_deepcopy = pd.read_csv(f\"{ROOT_DIR}/DeepCopyPrediction.csv\")\n",
-    "df_deepcopy"
+    "df_deepcopy.sort_values(\"Cell barcode\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
+   "id": "83275241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_common_substring(a, b):\n",
+    "    m, n = len(a), len(b)\n",
+    "    dp = [[0] * (n + 1) for _ in range(m + 1)]\n",
+    "    max_len = 0\n",
+    "\n",
+    "    for i in range(1, m + 1):\n",
+    "        for j in range(1, n + 1):\n",
+    "            if a[i - 1] == b[j - 1]:\n",
+    "                dp[i][j] = dp[i - 1][j - 1] + 1\n",
+    "                max_len = max(max_len, dp[i][j])\n",
+    "    return max_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8d47472a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ATATTATTTGCGTTT\n",
+      "Closest match: CTAGCCTCACGATGGA\n",
+      "Distance: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Levenshtein import distance  # pip install python-Levenshtein\n",
+    "\n",
+    "query = string_to_match\n",
+    "df = df_deepcopy\n",
+    "\n",
+    "df['distance'] = df['Cell barcode'].apply(lambda s: longest_common_substring(s, query))\n",
+    "\n",
+    "# Find closest match\n",
+    "closest = df.loc[df['distance'].idxmin()]\n",
+    "print(query)\n",
+    "print(\"Closest match:\", closest['Cell barcode'])\n",
+    "print(\"Distance:\", closest['distance'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "c709ffdb",
    "metadata": {},
    "outputs": [
