--- a/notebooks/Laks copy.ipynb
+++ b/notebooks/Laks copy.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 4,
       "metadata": {
         "id": "cS6rhxactc3Q"
       },
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -425,13 +425,14 @@
               "[9 rows x 14068 columns]"
             ]
           },
-          "execution_count": 84,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "F = laks.get_cell_fractions()\n",
+        "F.to_csv(\"../data/laks/scope/F.csv\")\n",
         "F"
       ]
     },
@@ -467,6 +468,13 @@
       "metadata": {},
       "source": [
         "# K-means Clustering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Perform k-means"
       ]
     },
     {
@@ -703,8 +711,143 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load k-means"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>mutation</th>\n",
+              "      <th>clone</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>10:100129846:C:A</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10:100185101:A:G</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10:100209326:T:C</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10:100283942:C:T</td>\n",
+              "      <td>9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10:10086005:G:T</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14063</th>\n",
+              "      <td>X:98278474:C:A</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14064</th>\n",
+              "      <td>X:98452192:T:C</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14065</th>\n",
+              "      <td>X:98700894:C:T</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14066</th>\n",
+              "      <td>X:99136386:C:T</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14067</th>\n",
+              "      <td>X:99571629:G:T</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>14068 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               mutation  clone\n",
+              "0      10:100129846:C:A      1\n",
+              "1      10:100185101:A:G      1\n",
+              "2      10:100209326:T:C      2\n",
+              "3      10:100283942:C:T      9\n",
+              "4       10:10086005:G:T      7\n",
+              "...                 ...    ...\n",
+              "14063    X:98278474:C:A      0\n",
+              "14064    X:98452192:T:C      5\n",
+              "14065    X:98700894:C:T      2\n",
+              "14066    X:99136386:C:T      1\n",
+              "14067    X:99571629:G:T      6\n",
+              "\n",
+              "[14068 rows x 2 columns]"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "kmeans_labels = pd.read_csv(\"../data/laks/scope/kmeans_labels.csv\", index_col=0)\n",
+        "kmeans_labels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -714,7 +857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -736,7 +879,7 @@
               "Name: mutation, dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -747,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -826,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -847,7 +990,7 @@
         "\n",
         "        # print(i)\n",
         "\n",
-        "        if i == 3:\n",
+        "        if i == 3 or i == 5 or i == 7:\n",
         "            thres = 0.75\n",
         "        else:\n",
         "            thres = 0.65\n",
@@ -869,7 +1012,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -878,7 +1021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -1097,18 +1240,19 @@
               "I         1.000000  0.000000  0.000000  1.000000  "
             ]
           },
-          "execution_count": 98,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "F_bar.to_csv(\"../data/laks/scope/F_bar.csv\")\n",
         "F_bar"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -1171,7 +1315,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>0.838596</td>\n",
+              "      <td>0.952381</td>\n",
               "      <td>0.625000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.888889</td>\n",
@@ -1184,9 +1328,9 @@
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.000000</td>\n",
-              "      <td>0.000000</td>\n",
+              "      <td>0.105263</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>0.909091</td>\n",
+              "      <td>1.000000</td>\n",
               "      <td>0.833333</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.240000</td>\n",
@@ -1199,7 +1343,7 @@
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.000000</td>\n",
-              "      <td>0.909091</td>\n",
+              "      <td>1.000000</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.777778</td>\n",
@@ -1214,7 +1358,7 @@
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.000000</td>\n",
-              "      <td>0.847368</td>\n",
+              "      <td>0.942724</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.740741</td>\n",
@@ -1304,10 +1448,10 @@
             "text/plain": [
               "           0    1    2    3         4         5    6         7         8   \\\n",
               "clone_id                                                                    \n",
-              "A         0.0  0.0  1.0  1.0  0.000000  0.000000  0.0  0.838596  0.625000   \n",
-              "B         0.0  0.0  1.0  1.0  0.000000  0.000000  0.0  0.909091  0.833333   \n",
-              "C         0.0  0.0  1.0  1.0  0.000000  0.909091  0.0  0.000000  0.777778   \n",
-              "D         0.0  0.0  1.0  1.0  0.000000  0.847368  0.0  0.000000  0.740741   \n",
+              "A         0.0  0.0  1.0  1.0  0.000000  0.000000  0.0  0.952381  0.625000   \n",
+              "B         0.0  0.0  1.0  1.0  0.000000  0.105263  0.0  1.000000  0.833333   \n",
+              "C         0.0  0.0  1.0  1.0  0.000000  1.000000  0.0  0.000000  0.777778   \n",
+              "D         0.0  0.0  1.0  1.0  0.000000  0.942724  0.0  0.000000  0.740741   \n",
               "E         0.0  1.0  1.0  0.0  0.909091  0.000000  0.0  0.000000  0.909091   \n",
               "F         0.0  1.0  1.0  0.0  0.000000  0.000000  0.0  0.000000  1.000000   \n",
               "G         1.0  0.0  1.0  0.0  0.000000  0.000000  1.0  0.000000  1.000000   \n",
@@ -1327,18 +1471,19 @@
               "I         0.000000  0.000000  1.0  "
             ]
           },
-          "execution_count": 99,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "F_hi.to_csv(\"../data/laks/scope/F_hi.csv\")\n",
         "F_hi"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -1401,7 +1546,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>0.666667</td>\n",
+              "      <td>0.606061</td>\n",
               "      <td>0.500000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.666667</td>\n",
@@ -1416,7 +1561,7 @@
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>0.714286</td>\n",
+              "      <td>0.666667</td>\n",
               "      <td>0.645161</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.000000</td>\n",
@@ -1429,7 +1574,7 @@
               "      <td>0.857143</td>\n",
               "      <td>0.689655</td>\n",
               "      <td>0.000000</td>\n",
-              "      <td>0.666667</td>\n",
+              "      <td>0.588235</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.625000</td>\n",
@@ -1444,7 +1589,7 @@
               "      <td>0.800000</td>\n",
               "      <td>0.625000</td>\n",
               "      <td>0.000000</td>\n",
-              "      <td>0.652174</td>\n",
+              "      <td>0.588235</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.000000</td>\n",
               "      <td>0.588235</td>\n",
@@ -1536,8 +1681,8 @@
               "clone_id                                                                   \n",
               "A         0.000000  0.00000  0.800000  0.606061  0.000000  0.000000  0.0   \n",
               "B         0.000000  0.00000  0.909091  0.714286  0.000000  0.000000  0.0   \n",
-              "C         0.000000  0.00000  0.857143  0.689655  0.000000  0.666667  0.0   \n",
-              "D         0.000000  0.00000  0.800000  0.625000  0.000000  0.652174  0.0   \n",
+              "C         0.000000  0.00000  0.857143  0.689655  0.000000  0.588235  0.0   \n",
+              "D         0.000000  0.00000  0.800000  0.625000  0.000000  0.588235  0.0   \n",
               "E         0.000000  0.97561  0.952381  0.000000  0.691379  0.000000  0.0   \n",
               "F         0.000000  1.00000  1.000000  0.000000  0.000000  0.000000  0.0   \n",
               "G         0.690053  0.00000  1.000000  0.000000  0.000000  0.000000  1.0   \n",
@@ -1546,8 +1691,8 @@
               "\n",
               "                7         8         9         10        11  \n",
               "clone_id                                                    \n",
-              "A         0.666667  0.500000  0.000000  0.666667  0.000000  \n",
-              "B         0.714286  0.645161  0.000000  0.000000  0.000000  \n",
+              "A         0.606061  0.500000  0.000000  0.666667  0.000000  \n",
+              "B         0.666667  0.645161  0.000000  0.000000  0.000000  \n",
               "C         0.000000  0.625000  0.000000  0.000000  0.000000  \n",
               "D         0.000000  0.588235  0.000000  0.000000  0.000000  \n",
               "E         0.000000  0.714286  0.634921  0.000000  0.833333  \n",
@@ -1557,12 +1702,13 @@
               "I         0.000000  1.000000  0.000000  0.000000  1.000000  "
             ]
           },
-          "execution_count": 100,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "F_lo.to_csv(\"../data/laks/scope/F_lo.csv\")\n",
         "F_lo"
       ]
     },
